infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ultrone
  labels:
    name: ultrone
    environment: production
